# wavery

./: Cargo.toml  Prusti.toml  README.md
formal/: encode_length.dfy  wip.dfy
fst/: Cargo.toml
fst/gtkwave_fst/: CMakeLists.txt  config.h  main.cpp
fst/gtkwave_fst/fst/: fastlz.c  fastlz.h  fstapi.c  lz4.c  lz4.h
fst/src/: fst.rs  lib.rs  valvec.rs  varint.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: varints.rs
gui/: Cargo.toml
gui/src/: decoder.rs  hierarchy.rs  main.rs  tree.rs  waves.rs
test/: output.vcd
